made some researches regarding creating of classes, and creating cities

--- a/SellingAuto's/SellingAuto's.csproj
+++ b/SellingAuto's/SellingAuto's.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>SellingAuto_s</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
 </Project>
